# rainynite-studio

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  moc_test.h  replace_nested_namespaces.sh  replace_nested_namespaces_in_headers.sh  test_moc.sh
data/: icon.rnite
studio/: .clang-format  CMakeLists.txt  canvas.cpp  canvas.h  color_button.cpp  color_button.h  color_widget.cpp  context_listener.cpp  context_listener.h  custom_widgets.h  helloworld.webm  imperfect_wave.webm  main_window.cpp  main_window.h  main_window.ui  node_edit_dock.cpp  node_edit_dock.h  node_edit_dock.ui  node_editor.h  node_model.cpp  node_model.h  node_tree_dock.cpp  node_tree_dock.h  node_tree_dock.ui  playback_dock.cpp  playback_dock.h  playback_dock.ui  pulse.webm  resources.qrc  time_dock.cpp  time_dock.h  time_dock.ui  timeline_view.cpp  timeline_view.h  version.h.cmake.in
studio/actions/: external_player.cpp  import.cpp  import.h  import_soundtrack.cpp  process_node.h
studio/canvas/: abstract_canvas.cpp  abstract_canvas.h  abstract_editor.h  attachable.cpp  attachable.h  bezier_editor.cpp  bezier_editor.h  editor.cpp  editor.h  point_editor.cpp  point_editor.h  point_item.cpp  point_item.h  qt_path.h  rectangle_editor.cpp  rectangle_editor.h  registry.h  time_editor.cpp  time_item.cpp  time_item.h  time_period_editor.cpp  timeline_cursor.cpp  tool.cpp  tool.h
studio/canvas/editors/: animated.cpp  bezier_editor.cpp  bezier_editor.h  point_editor.cpp  point_editor.h  point_item.cpp  point_item.h  qt_path.h  rectangle_editor.cpp  rectangle_editor.h  time_bezier.cpp  time_editor.cpp  time_item.cpp  time_item.h  time_period_editor.cpp  timeline_cursor.cpp  waveform.cpp
studio/canvas/tools/: base.h  bezier.cpp  circle.cpp  default.cpp  rectangle.cpp  shape.cpp  shape.h  time_default.cpp  transform_move.cpp  zoom_area.cpp
studio/docks/: advanced_color_dock.cpp  advanced_color_dock.h  advanced_color_selector.cpp  advanced_color_selector.h  advanced_color_selector.ui  close_destroy_dock.h  log.cpp  log.h  log.ui  node_edit.cpp  node_edit.h  node_edit.ui  node_edit_dock.cpp  node_edit_dock.h  node_edit_dock.ui  node_tree.cpp  node_tree.h  node_tree.ui  node_tree_dock.cpp  node_tree_dock.h  node_tree_dock.ui  playback.cpp  playback.h  playback.ui  playback_dock.cpp  playback_dock.h  playback_dock.ui  time_dock.cpp  time_dock.h  time_dock.ui  timearea.cpp  timearea.h  timearea.ui  timearea_dock.cpp  timearea_dock.h  timearea_dock.ui  undo_history.cpp  undo_history.h  undo_history.ui
studio/generic/: action.h  action_menu.cpp  canvas_editor.cpp  canvas_editor.h  context_listener.cpp  context_listener.h  custom_widgets.cpp  custom_widgets.h  destroy_detector.h  dock_registry.h  editor_context.cpp  editor_context.h  node_editor.cpp  node_editor.h  node_editor_widget.h  node_menu.cpp  node_menu.h  process_node.h  timeline_editor.cpp  timeline_editor.h
studio/main/: about.cpp  about.h  about.ui  audio.cpp  audio.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  renderer.cpp  renderer.h
studio/models/: model_filter.h  node_list.cpp  node_list.h  node_model.cpp  node_model.h  undo_model.cpp  undo_model.h
studio/util/: geom.h  pen.cpp  pen.h  qt_path.h  strings.h
studio/widgets/: bezier_editor.cpp  bezier_editor.h  bezier_editor.ui  boolean_editor.cpp  canvas.cpp  canvas.h  color_button.cpp  color_button.h  color_widget.cpp  editor_factory.cpp  file_path_editor.cpp  file_path_editor.h  multiline_editor.cpp  node_string_editor.h  point_editor.cpp  point_editor.h  point_value_editor.cpp  point_value_editor.h  rectangle_editor.cpp  timeline_area.cpp  timeline_area.h  timeline_ruler.cpp  timeline_ruler.h  timeline_view.cpp  timeline_view.h
